some definitions from the Linux driver (via PR kern/42853)